css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;

  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

ul {
  margin: 0;
  padding: 0;
}

.cards {
  list-style-type: none;
}

.card {
  display: block;
}

.card-img {
  text-align: center;
}

.card-img img {
  width: 50px;
}

.card-body h2 {
  font-weight: normal;
  margin-bottom: 0;
}

.card-body p {
  margin-top: 0;
}

@media only screen and (min-width: 25em) {

  .card {
    display: block;
  }

  .card-img {
    display: inline-block;
    width: 20%;
  }

  .card-body {
    display: inline-block;
    width: 78%;
  }

}

@media only screen and (min-width: 38em) {

  html {
    font-size: 110%;
    line-height: 1.4;
  }

  .cards {
    display: inline-block;
    width: 32%;
  }

  .card-img {
    display: block;
    margin: 0;
    padding: 0;
    width: auto;
  }

  .card-body {
    display: block;
    margin: 0;
    padding: 0;
    width: auto;
  }
}

@media only screen and (min-width: 60em) {

  html {
    font-size: 120%;
    line-height: 1.5;
  }

}

@media only screen and (min-width: 90em) {

  html {
    font-size: 130%;
  }

}

